--- a/ProjectAPI/index.html
+++ b/ProjectAPI/index.html
@@ -1,39 +1,63 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>API</title>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <title>API Calling Using Ajax</title>
 </head>
-<body>
-    <div id="container">
-    </div>
-    <script>
+<body style="background-color: rgba(0,0,0,0.15)">
+    <nav class="navbar navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand mb-0 h1" href="#">AJAX call using XMLHttpRequest</a>
+        </div>
+    </nav>
+    <div id="container"></div>
+<script>
         const container = document.querySelector('#container');
-
         const request = new XMLHttpRequest();
-        request.open('GET',"https://restcountries.com/v2/name/india");
+        request.open('GET',"https://restcountries.com/v2/callingcode/91");
+        //request.open('GET',"https://restcountries.com/v2/name/india");
         request.send();
+        //console.log(this.responseText);
 
-        //to get the response
-        request.addEventListener('load',funtion() {
+        //get response 
+        request.addEventListener('load', function()
+        {
+            //console.log( this.responseText);
             const [data] = JSON.parse(this.responseText);
+            console.log(data);
             //console.log(data.capital);
             const htmlData = `
-            <img src="${data.flag}" alt="" class="card-body-img">
-            ${data.name}
-            ${data.capital}
-            ${data.nativeName}
-            ${data.population}
-            ${data.flag}
-            ${data.demonym}
 
-            `;
 
+            <div class="card" style="width: 30rem; margin: auto; margin-top: 20px; margin-bottom: 20px; box-shadow: 5px 5px 30px 15px rgba(0,0,0,0.25);">
+           <img class="card-img-top" src="${data.flag}" alt="Card image cap">
+           <div class="card-body">
+            <h5 class="card-title">${data.name}, ${data.nativeName}</h5>
+            <p class="card-text">Time : ${data.timezones} ${data.demonym}</p>
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">Capital : ${data.capital}</li>
+            <li class="list-group-item">AlphaCode : ${data.alpha3Code}</li>
+            <li class="list-group-item">Population : ${data.population}</li>
+          </ul>
+          <div class="card-body">
+            <a class="card-link">${data.region}</a>
+            <a class="card-link">${data.numericCode}</a>
+            <a class="card-link">${data.subregion}</a>
+          </div>
+        </div>  `;
             container.insertAdjacentHTML("afterbegin",htmlData)
         })
-            //console.log(this.responseText);
+
     </script>
-</body>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  </body>
 </html>
