--- a/ProjectAPIusingfetch/index.html
+++ b/ProjectAPIusingfetch/index.html
@@ -18,16 +18,16 @@
         <div class="card-body">
             <h5 class="card-title">New Jokes </h5>
             <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <div id="joke" class="jokes">Next Joke Loading..👍</div>
-            <a href="#" id="button">Click Me</a>
+            <div id="joke" class="joke">Next Joke Loading..👍</div>
+            <a id="button" class="btn btn-primary">Click Me</a>
         </div>
     </div>
     <!-- Optional JavaScript; choose one of the two! -->
     <script>
-        const jokes = document.getElementById('joke');
+        const jokes = document.querySelector('#joke');
         const jokebtn = document.querySelector('#button');
 
-        const jokegenerator = () => {
+        const jokeg = () => {
             const setHeader = {
                 headers: {
                     Accept: "application/json"
@@ -35,12 +35,14 @@
             }
             fetch('https://icanhazdadjoke.com', setHeader)
                 .then((res) => res.json())
-                .thn((data) => {
+                .then((data) => {
                     jokes.innerHTML = data.joke;
                 }).catch((error) => {
                     window.alert(error);
                 })
         }
+        jokebtn.addEventListener('click',jokeg);
+        jokeg();
     </script>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
