--- a/Project(async)API/index.html
+++ b/Project(async)API/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -9,45 +8,37 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    <title>Hello, world!</title>
+    <title>Async Using API</title>
 </head>
 
 <body>
     <div class="card text-center">
         <div class="card-body" style="    padding: 9rem 3rem;
-        background: khaki;">
+        background: antiquewhite;">
             <h5 class="card-title">New Jokes </h5>
             <p class="card-text" >With supporting text below as a natural lead-in to additional content.</p>
             <div id="joke" class="joke" style="font-size: xx-large;">Next Joke Loading..👍</div>
-            <div id="ids" class="ids" style="font-size: xx-large;">Id 🔢</div>
-            <a id="button" class="btn btn-success" style="margin: 2rem;">Click Me</a>
+            <a id="button" class="btn btn-primary" style="margin: 2rem;">Click Me</a>
         </div>
     </div>
     <!-- Optional JavaScript; choose one of the two! -->
     <script>
         const jokes = document.querySelector('#joke');
-        const ids = document.querySelector('#ids');
         const jokebtn = document.querySelector('#button');
 
-        const jokeg = () => {
+        const jokegenerator = async () => {
             const setHeader = {
                 headers: {
                     Accept: "application/json"
-                }
-            }
-            fetch('https://icanhazdadjoke.com', setHeader)
-                .then((res) => res.json())
-                .then((data) => {
-                    //jokes.innerHTML = data.status;
-                    jokes.innerHTML = `${data.joke}`;
-                    ids.innerHTML = `${data.id}`;
-                }).catch((error) => {
-                    window.alert(error);
-                })
+                }}
+           const res = await fetch('https://icanhazdadjoke.com', setHeader)
+           const data = await(res.json());
+           jokes.innerHTML = data.joke;
         }
-        jokebtn.addEventListener('click',jokeg);
-        jokeg();
+    
+        jokebtn.addEventListener('click',jokegenerator);
+        jokegenerator();
+    
     </script>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
